[package]
name = "netwayste"
version = "0.1.1"
authors = ["Aaron Miller <aaron.miller04@gmail.com>", "manghi <manghirs@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "cli-client"
path = "src/client.rs"

[dependencies]
futures      = "0.1.17"
tokio-core   = "0.1.9"
log          = "*"
env_logger   = "0.4.3"
serde        = "*"
serde_derive = "1.0.15"
bincode      = "0.9.2"
base64       = "*"
rand         = "*"
time         = "0.1"
proptest     = "0.7.2"
semver       = "0.9.0"
