[package]
name = "conwayste"
version = "0.3.5"
authors = [ "Ameen Manghi <manghirs@gmail.com>", "Aaron Miller <aaron.miller04@gmail.com>" ]
license = "GPL-3.0+"
edition = "2018"

[dependencies]
chromatica   = "1.0.1"
chrono       = "0.4.11"
color-backtrace = "0.4"
conway       = { path = "../libconway" }
custom_error = "1.7"
downcast-rs  = "1.2.0"
enum-iterator = "0.5"
env_logger   = "0.7.1"
futures      = "0.1.17"
ggez         = "0.5"
id_tree      = "1.7.0"
lazy_static  = "1.3"
log          = "0.4.8"
netwayste    = { path = "../netwayste" }
rand         = "0.7"
serde        = {version="1.0.90", features=["derive"]}
tokio-core   = "0.1.9"
toml         = "0.5"
version      = "2.0.1"

[[bin]]
name = "client"
path = "src/client.rs"
