[package]
name = "conwayste"
version = "0.3.5"
authors = [ "Ameen Manghi <manghirs@gmail.com>", "Aaron Miller <aaron.miller04@gmail.com>" ]
license = "GPL-3.0+"
edition = "2018"

[dependencies]
chromatica   = "1.0.1"
chrono       = "0.4.19"
color-backtrace = "0.4"
conway       = { path = "../libconway" }
custom_error = "1.8"
downcast-rs  = "1.2.0"
enum-iterator = "0.6"
env_logger   = "0.8.2"
futures      = "0.3"
ggez         = "0.5"
id_tree      = "1.7.0"
lazy_static  = "1.3"
log          = "0.4.11"
netwayste    = { path = "../netwayste" }
rand         = "0.8"
serde        = {version="1.0.116", features=["derive"]}
toml         = "0.5"
version      = "3.0.0"

[dependencies.tokio]
version = "0.2"
features = ["full"]

[[bin]]
name = "client"
path = "src/client.rs"
