[package]
name = "dissect-netwayste"
version = "0.1.0"
authors = ["Aaron Miller <aaron.miller04@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
netwayste   = { path = "../netwayste" }
tokio-core  = "0.1.9"

[build-dependencies]
bindgen = "0.49.0"
pkg-config = "0.3.17"

[lib]
crate-type = ["cdylib"]
