[package]
name = "dissect-netwayste"
version = "0.1.0"
authors = ["Aaron Miller <aaron.miller04@gmail.com>", "Ameen Manghi <manghirs@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
lazy_static = "1.3.0"
netwayste   = { path = "../netwayste" }
tokio-core  = "0.1.9"

[dependencies.syn]
version = "1.0.16"
features = ["full", "extra-traits"]

[build-dependencies]
bindgen = "0.49.0"
pkg-config = "0.3.17"

[lib]
crate-type = ["cdylib"]
