[package]
name = "dissect-netwayste"
version = "0.3.5"
authors = ["Aaron Miller <aaron.miller04@gmail.com>", "Ameen Manghi <manghirs@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
byteorder = "1.3.4"
lazy_static = "1.3.0"
netwayste   = { path = "../netwayste" }
tokio-core  = "0.1.18"
walkdir = "2"

[dependencies.syn]
version = "1.0.48"
features = ["full", "extra-traits"]

[dependencies.tokio-util]
version = "0.3"
features = ["codec"]


[build-dependencies]
bindgen = "0.54.0"
pkg-config = "0.3.19"

[lib]
crate-type = ["cdylib"]
