[package]
name = "dissect-netwaystev2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.13"
netwaystev2 = {path = "../netwaystev2"}
pcap = { version = "1", features = ["capture-stream"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
