[package]
name = "conway"
version = "0.3.5"
authors = ["Aaron Miller <aaron.miller04@gmail.com>", "mang"]
license = "GPL-3.0+"
description = "library for multi-player game of life Conwayste"
edition = "2018"

[dependencies]
env_logger = "0.7"
log        = "0.4"
rand       = "0.7"
custom_error = "1.7"
