[package]
name = "netwayste"
version = "0.3.5"
authors = ["Aaron Miller <aaron.miller04@gmail.com>", "manghi <manghirs@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
base64               = "0.13.0"
bincode              = "1.3.1"
bytes                = "1.0.0"
chrono               = "0.4.19"
clap                 = "2"
color-backtrace      = "0.5"
conway               = { path = "../libconway" }
env_logger           = "0.8.3"
futures              = "0.3"
log                  = "0.4.11"
rand                 = "0.8.3"
regex                = "1"
reqwest              = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
semver               = "0.11.0"
serde_json           = "1.0"
thiserror            = "1.0"
time                 = "0.1"
tokio-core           = "0.1.18"

[dependencies.serde]
version = "1.0.116"
features = ["derive"]

[dependencies.tokio]
version = "1.5"
features = ["full"]

[dependencies.tokio-stream]
version = "0.1.3"

[dependencies.tokio-util]
version = "0.6.3"
features = ["codec", "net"]

[dev-dependencies]
proptest             = "0.10"
tokio-test = "*"
