[package]
name = "nw-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[bin]]
name = "netwaysted"
path = "src/netwaysted.rs"

[[bin]]
name = "netwaystectl"
path = "src/netwaystectl.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
