[package]
name = "nw-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[bin]]
name = "netwaysted"
path = "src/netwaysted.rs"

[[bin]]
name = "netwaystectl"
path = "src/netwaystectl.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2.1", features = ["derive"] }
indexmap = "1.9.3"
serde = { version = "1.0", features = ["derive"] }
snowflake = "1.3.0"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0.40"

[dependencies.tokio]
version = "1.4"
features = ["signal", "sync", "net", "macros", "rt", "rt-multi-thread"]
