[package]
name = "tui-netwayste"
version = "0.1.0"
authors = ["Aaron Miller <aaron.miller04@gmail.com>", "Ameen Manghi <manghirs@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.38"
crossterm = "0.22.1"
netwaystev2 = {path = "../netwaystev2"}
thiserror = "1.0.16"
unicode-width = "*"

[dependencies.tui]
version = "0.16.0"
features = ["crossterm"]