[package]
name = "tui-netwayste"
version = "0.1.0"
authors = ["Aaron Miller <aaron.miller04@gmail.com>", "Ameen Manghi <manghirs@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.38"
crossterm = "0.22.1"
mimicry         = {git = "https://github.com/conwayste/mimicry", rev = "bd3674f19067a8df185fb3910d3390787b52d6cd"}
netwaystev2 = {path = "../netwaystev2"}
strum           = "0.23"
strum_macros    = "0.23"
thiserror = "1.0.16"
unicode-width = "*"

[dependencies.tui]
version = "0.16.0"
features = ["crossterm"]
